Update 01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md

--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -1,31 +1,6 @@
 # 내가 단단해지는 새벽공부, 천년의 내공(조윤제)
 
 ### 0. 들어가는 글
-- 격: 상대를 배려하고 존중하는 마음  
- >ex: 스스로를 높이는 것이 아니라, 상대를 높임으로써 함께 높아지는 *품격*
-- 치: 현재 겪고 있는 일의 의미를 정확하게 읽어 이를 통해 상황을 다스린다.(*치도*)  
- >인용구: 곤궁에는 운명이 있음을 알고, 형통에는 때가 있음을 알고, 큰 어려움에 처해도 두려워하지 않는 것이 성인의 용기다.  
-- 기: 상대를 제압하는 *기세*  
- >ex: 반드시 산 정상에 올라 뭇 산들의 작음을 굽어보리라(후진타오)  
- 
-#### 0-1. 말의 힘은 내면의 힘이다.
-- 내공 : 세상과 사람을 읽는 통찰력과 오랜 수련으로 쌓아온 호연지기  
-- 인용구: 천명을 알지 못하면 군자가 될 수 없고, 예를 알지 못하면 세상에 당당히 설 수 없고, 말을 알지 못하면 사람을 알 수 없다.(논어, 3부지)  
-#### 0-2. 인문고전의 지혜에서 얻는 내공  
-#### 0-3. 지셰린이 전하는 중국 천 년의 내공이 담긴 말  
-#### 0-4. 새벽, 내공을 쌓기 좋은 어른의 시간  
-
-<hr />
-
-## 격: 자연스럽게 드러나는 어른의 경지  
-
-### 1. 스스로 돌이켜 바로 세우다 (반구저기)  
-
-#### 1-1. 스스로에게 비겁하지 않는 삶, 대장부  
-=======
-# 내가 단단해지는 새벽공부, 천년의 내공(조윤제)
-
-### 0. 들어가는 글
 - 격: 상대를 배려하고 존중하는 마음 (스스로를 높이는 것이 아니라, 상대를 높임으로써 함께 높아지는 *품격*)  
 - 치: 현재 겪고 있는 일의 의미를 정확하게 읽어 이를 통해 상황을 다스린다.(*치도*)  
 > 곤궁에는 운명이 있음을 알고, 형통에는 때가 있음을 알고, 큰 어려움에 처해도 두려워하지 않는 것이 성인의 용기다.  
@@ -102,6 +77,10 @@
 > 날이 추워진 후에야 소나무와 잣나무의 잎이 더디 시듦을 안다.
 - 눈앞의 이익에 급급하고, 작은 위기에도 흔들려 쉽게 변한다면 그 조직은 품격과는 거리가 멀다.
 - 조직의 품격은 구성원에 달려있다. 그리고 그 구성원은 리더를 닮는다. 결국 리더의 품격이 조직의 품격을 말해준다.  
+
+#### 2-4. 조직의 힘은 리더의 자애에서 나온다.
+> 백성이 가장 귀하고, 사직이 다음이며, 군주가 가장 가볍다
+- 맹자: 군주가 신하를 자신의 수족처럼 중히 여기면 신하는 군주를 자신의 복심(배와 심장)으로 여기고, 신하를 개와 말처럼 하찮게 여기면 신하는 군주를 길가는 노인으로 여기며, 신하를 흙 지푸라기처럼 여기면 군주를 철천지 원수처럼 여긴다.  
 
 
 
