Update 01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md

--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -82,5 +82,22 @@
 > 백성이 가장 귀하고, 사직이 다음이며, 군주가 가장 가볍다
 - 맹자: 군주가 신하를 자신의 수족처럼 중히 여기면 신하는 군주를 자신의 복심(배와 심장)으로 여기고, 신하를 개와 말처럼 하찮게 여기면 신하는 군주를 길가는 노인으로 여기며, 신하를 흙 지푸라기처럼 여기면 군주를 철천지 원수처럼 여긴다.  
 
+#### 2-5. 두 사람이 힘을 합치면 쇠도 끊을 수 있다.
+> 하늘의 때는 땅의 이로움만 못하고, 땅의 이득은 사람의 화합만 못하다
+- (진인사대천명) 먼저 사람으로서 할 수 있는 모든 노력을 경주한 다음 하늘의 도움을 기다리라.
+- 조직이 이루고자 하는 목표을 위해 하나가 될 때 어떠한 외부의 위협에도 굳건할 수 있고 놀라운 발전을 할 수 있다.
+
+#### 2-6. '격'이란 스스로 드러내지 않아도 사람들이 알아본다.
+> 복숭아와 오얏은 말을 하지 않아도 나무 밑에 저절로 길이 생긴다.
+- 특별히 자신을 내세우지 않아도 말과 행동에서 사람들은 그의 인품을 자연스럽게 알게된다. 그리고 그의 덕을 사랑하고 존경하는 마음에서 그에게 모여들게 된다. 
+
+#### 2-7. 듣는 내가 열려 있다면 모든 사람의 말은 옳다.
+> 지혜로운 사람도 천 번을 생각하면 한번은 실수하기 마련이고, 어리석은 사람도 천 번을 생각하면 한 번쯤은 지혜로운 생각을 한다.
+- 마을을 열고 귀를 열어 어떤 말도 소중하게 듣겠다.
+
+#### 2-8. 성공한 사람에게는 그의 발전을 기다려준 어른이 있다.
+> 동쪽에서 잃어버리고 서쪽에서 거두어들인다.
+- 한 순간의 실패로 좌절하고 있는 부하들에게 따뜻한 격려와 의욕의 말로 줄 수 있는 명언이다.
+
 
 
