Update 01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md

--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -99,5 +99,16 @@
 > 동쪽에서 잃어버리고 서쪽에서 거두어들인다.
 - 한 순간의 실패로 좌절하고 있는 부하들에게 따뜻한 격려와 의욕의 말로 줄 수 있는 명언이다.
 
+#### 2-9. 사람을 귀하게 여길줄 모르면 미래란 없다.
+> 산은 높아지기를 마다 않고 바다는 깊어지기를 꺼려하지 않는다. 주공이 입안의 음식을 뱉으며 인재를 환영하자 천하가 마을을 열었따.
+
+#### 2-10. 하늘과 땅이 다해도 그치지 않는 힘, 사랑
+> 장구한 천지는 다할날이 있겠지만 이루지 못한 사랑의 한 그칠 날이 없으리라.
+<br>
+
+### 3. 공존하고 공감하기에 인간이다.
+<br>
+
+#### 3-1. 
 
 
