--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -109,6 +109,9 @@
 ### 3. 공존하고 공감하기에 인간이다.
 <br>
 
-#### 3-1. 
+#### 3-1. 하나를 말하고 둘을 들을 때 한마음이 된다.
+> 말하는 이는 죄가 없으니, 듣는 이가 경계로 삼으면 된다.
+- 사람의 마음이란 말로 설득해서 얻을 수 있는 것이 아니다. 타인이 털어 놓은 속내를, 꺼내놓은 의견을 진심으로 들으며 그 말에 공감한다는 작은 표현을 할 수 있어야 상대방의 마음을 열 수 있다.
+- 신뢰는 이러한 경청의 경험이 쌓이면서 형성되는 것이다.
 
 
