Update 01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md

--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -114,4 +114,14 @@
 - 사람의 마음이란 말로 설득해서 얻을 수 있는 것이 아니다. 타인이 털어 놓은 속내를, 꺼내놓은 의견을 진심으로 들으며 그 말에 공감한다는 작은 표현을 할 수 있어야 상대방의 마음을 열 수 있다.
 - 신뢰는 이러한 경청의 경험이 쌓이면서 형성되는 것이다.
 
+#### 3-2. 더 크게 보면 그만큼 나의 범위는 넓어진다.
+> 다른 산의 돌로도 자기의 옥을 갈 수 있다.(타산지석 가이공옥)
+- 세 사람이 길을 가면 반드시 나의 스승이 있다(`공자)
+- 내가 배우려는 자세만 확림되어 있다면 어떤 사람에게서도 배울 수 있다(반면교사)  
+
+#### 3-3. 나를 미루어 상대를 배려하는 한마디의 힘  
+> 내가 원하지 않는 바를 남에게 베풀지 말라.  
+- 공자 서(恕)의 철학 : ==공감, 역지사지(다른 사람의 입장이 된다), 추기급인(내 처지로 미루어 다른 사람을 생각한다), 혈구지도(내 마음의 잣대로 다른 사람을 헤아린다.  
+- 기독교의 황금률 : 남에게 대접을 받고자 하는 대로 너희도 남을 대접하라  
+
 
