Update 01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md

--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -124,4 +124,10 @@
 - 공자 서(恕)의 철학 : ==공감, 역지사지(다른 사람의 입장이 된다), 추기급인(내 처지로 미루어 다른 사람을 생각한다), 혈구지도(내 마음의 잣대로 다른 사람을 헤아린다.  
 - 기독교의 황금률 : 남에게 대접을 받고자 하는 대로 너희도 남을 대접하라  
 
+#### 3-4. 어른으로 대접받고 싶다면 먼저 어른으로 대접해야한다.
+> 장막 안에서 계책을 세워 천리 밖의 승리를 거두다(운주유악지중 결승천리지외)  
+- 조직의 승패는 리더가 어떤 사람인가보다 어떤 인재를 위하에 두고 있느냐에 따라 결정된다. 능력이 있는 사람들을 적재적소에 활용해 그 능력을 최대한 발휘하게 만드는 것도 승패의 중요한 요인이다.  
+- 여러 사람의 지혜를 모으면 천하를 가질 수 있지만, 자기에게만 의존하면 제 몸 하나 보존하기 어렵다(회남자)  
+- 부하들의 존경과 세상의 칭찬은 스스로 취하는 것이 아니라, 베풂으로써 저절로 얻어진다. 
+
 
