Update 01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md

--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -128,6 +128,10 @@
 > 장막 안에서 계책을 세워 천리 밖의 승리를 거두다(운주유악지중 결승천리지외)  
 - 조직의 승패는 리더가 어떤 사람인가보다 어떤 인재를 위하에 두고 있느냐에 따라 결정된다. 능력이 있는 사람들을 적재적소에 활용해 그 능력을 최대한 발휘하게 만드는 것도 승패의 중요한 요인이다.  
 - 여러 사람의 지혜를 모으면 천하를 가질 수 있지만, 자기에게만 의존하면 제 몸 하나 보존하기 어렵다(회남자)  
-- 부하들의 존경과 세상의 칭찬은 스스로 취하는 것이 아니라, 베풂으로써 저절로 얻어진다. 
+- 부하들의 존경과 세상의 칭찬은 스스로 취하는 것이 아니라, 베풂으로써 저절로 얻어진다.  
 
+#### 3-5. 밥부터 해결해준 다음에 미래를 이야기할 수 있다. 
+> 나라는 백성을 근본으로 삼고 백성은 먹을 것을 하늘처럼 여긴다.  
+- 희생만을 강요하는 조직은 사람들에게 신뢰를 줄 수 없다. 노력한 만큼 그에 합당한 보상이 반드시 주어져야하고, 그 보상은 공정해야한다.  
+- 말로만 상찬할 뿌 진정한 보상이 없다면 아무도 따르지 않는다.  
 
