--- a/01_인문학/02_데일카네기 인간관계론.md
+++ b/01_인문학/02_데일카네기 인간관계론.md
@@ -1,1 +1,8 @@
+# 데일카네기 인간관계론  
+
+#### 저자서문 
+- 엔지니어링 분야에서도기술적 지식이 경게적 성공에 기여하는바는 15퍼센트에 불과하고 나머지 85퍼센트는 인관관계의 기술, 즉 성격과 통솔력에 달려 있다고 한다. 
+- 기술적 지식에 더해 자신의 생각을 표현하고 리더십이 있으며, 다른 사람들의 열정을 불러일으킬 수 있는 능력이 있는 사람, 이런 사람들에게는 더 보수가 높은 일자리가 기다리고 있다.  
+
+##### 이 책으로 최대한의 효과를 얻기위한 8가지 제안
 
