--- a/01_인문학/02_데일카네기 인간관계론.md
+++ b/01_인문학/02_데일카네기 인간관계론.md
@@ -4,5 +4,14 @@
 - 엔지니어링 분야에서도기술적 지식이 경게적 성공에 기여하는바는 15퍼센트에 불과하고 나머지 85퍼센트는 인관관계의 기술, 즉 성격과 통솔력에 달려 있다고 한다. 
 - 기술적 지식에 더해 자신의 생각을 표현하고 리더십이 있으며, 다른 사람들의 열정을 불러일으킬 수 있는 능력이 있는 사람, 이런 사람들에게는 더 보수가 높은 일자리가 기다리고 있다.  
 
-##### 이 책으로 최대한의 효과를 얻기위한 8가지 제안
+#### 이 책으로 최대한의 효과를 얻기위한 8가지 제안
+1. 끊임없이 자신에게 속삭여라. '내 인기도, 내 행복, 내 수입이 사람을 다루는 내 기술에 따라 엄청나게 달라진다'  
+2. 각 Part 속독후, 다시 돌아가 정독하라.  
+3. 지금 읽고 있는 내용에 대해 깊이 생각하라.  
+4. 활용할 수 있는 제안을 보게 되면, 표시를 해 놓아라.  
+5. 망각의 속도는 놀랍다. 정독을 한 이후에도 매달 서너시간은 다시 읽어 보아라. 책상 위에 두고 자주 쳐다보아라.
+6. '가르쳐주면 스스로 배우지 못한다', 실행(실천)하는 가운데 배운다.  
+7. 자신이 정한 원칙을 어길때마다 벌금을 물겠다고 약속하라.  
+8. 매주 여러분 자신의 진전을 체크해보라. 여러분이 어떤 잘못을 했는지, 어떤 진전이 있었는지, 그리고 미래를 위해 어떤 교훈을 깨달았는지 확인하라.  
+
 
