--- a/01_인문학/02_데일카네기 인간관계론.md
+++ b/01_인문학/02_데일카네기 인간관계론.md
@@ -14,4 +14,55 @@
 7. 자신이 정한 원칙을 어길때마다 벌금을 물겠다고 약속하라.  
 8. 매주 여러분 자신의 진전을 체크해보라. 여러분이 어떤 잘못을 했는지, 어떤 진전이 있었는지, 그리고 미래를 위해 어떤 교훈을 깨달았는지 확인하라.  
 
+### 인간관계론 개선방법 요약
 
+##### 1.사람을 다루는 기본 테크닉  
+  1)사람들에 대한 비판, 비난, 불평을 삼가라  
+  2)솔직하고 진지하게 칭찬하라.  
+  3)상대방의 가슴속에 강한 욕구를 불러일으켜라.  
+
+##### 2.사람의 호감을 얻는 6가지 방법  
+  1)다른 사람에게 진정한 관심을 가져라.  
+  2)웃어라(미소)  
+  3)상대방에게는 자신의 이름이 사람의 입에서 나오는 가장 달콤하면서도 가장 중요한 말임을 기억하라.  
+  4)잘 듣는 사람이 되어라. 상대방이 스스로에 대해 얘기하도록 이끌어라.  
+    > '여러분에게 얘기를 건네는 사람은 여러분이나 여러분의 문제보다 자신과 자신의 희망, 자신의 문제에 수백 배나 더 관심이 많다는 사실을 명심하자'  
+  5)상대방의 관심사에 관해 애기하라.  
+  6)상대방이 인정받는다고 느끼게 하라. 그리고 진심으로 인정하라.  
+
+##### 3.상대방을 설득하는 12가지방법  
+  1)논쟁에서 이기는 방법은 논쟁을 피하는 것뿐이다.  
+  2)상대의 의견을 존중하라. 상대의 잘못을 지적하지 말라.  
+  3)잘못을 했을 경우에는 빨리, 분명하게 잘못을 인정하라.  
+  4)우호적으로 시작하라.  
+  5)상대가 선뜻 "네, 네"라고 대답할 수 있게 만들어라.  
+  6)나보다 상대가 더 많이 얘기하게 하라.  
+  7)상대가 스스로 생각해냈다고 느끼게 하라.  
+  8)상대의 처지에서 사물을 보려고 진심으로 노력하라.  
+  9)상대의 생각과 욕구에 공감하라.  
+  10)상대의 고상한 동기에 호소하라.  
+  11)당신의 생각을 극적으로 표현하라.  
+  12)도전 의욕을 불러일으켜라.  
+
+##### 4.반감이나 반발없이 상대를 변화시키는 9가지 방법  
+  1)칭찬과 솔직한 감사의 말로 시작하라.  
+  2)상대의 실수를 간접적으로 지적하라.  
+  3)상대를 비판하기 전에 자신의 잘못에 대해 먼저 얘기하라.  
+  4)직접적으로 명령하지 말고 질문을 하라.  
+  5)상대의 체면을 세워줘라.  
+  6)아주 조금의 진전이라도 칭찬하라. 어떤 진전이든 칭찬하라, "진심으로 인정하고 아낌없이 칭찬하라"  
+  7)상대가 지키고 싶은 좋은 평판을 주어라  
+  8)격려하라. 고쳐주고 싶은 잘못이 있으면 그것이 고치기 쉬운 것으로 보이게 하라. 상댁다 하기를 바라는 것은 하기 쉬운 것으로 보이게 하라.  
+  9)내가 제안하는 것을 상대가 기꺼이 하게 만들어라  
+
+##### 5.기적을 일으키는 편지들  
+
+##### 6.행복한 가정을 만드는 7가지 비결  
+  1)절대로 잔소리 하지 말라.  
+  2)상대를 바꾸려 하지 말라.  
+  3)비난하지 말라.  
+  4)진심으로 칭찬하라.  
+  5)작은 관심을 보여라.  
+  6)예의를 갖춰라.  
+  7)결혼생활의 성적인 것에 관해 좋은 책들을 읽어라.  
+  
