--- a/01_인문학/02_데일카네기 인간관계론.md
+++ b/01_인문학/02_데일카네기 인간관계론.md
@@ -16,15 +16,15 @@
 
 ### 인간관계론 개선방법 요약
 
-##### 1.사람을 다루는 기본 테크닉  
-  1)사람들에 대한 비판, 비난, 불평을 삼가라  
+#### 1.사람을 다루는 기본 테크닉  
+#####  1)사람들에 대한 비판, 비난, 불평을 삼가라  
    - 인간의 본성은 잘못을 저질러 놓고도 남을 탓하고 결코 자신의 잘못은 인저하지 않는게 인간이다.  
    - 비난은 언제나 다시 돌아온다. 바로 잡아 주고 싶거나 비난하려는 사람은 스스로를 정당화할 뿐만 아니라, 거꾸로 우리에게 비난을 퍼부을 것이다.
    - 사람을 비판하거나 비난하거나, 불평이나 잔소리를 늘어놓는 건 어떤 바보라도 할 수 있다. 이해하고 용서하는 것은 뛰어난 품성과 자제력을 갖춘 사람만이 할 수 있다. 
   2)솔직하고 진지하게 칭찬하라.  
   3)상대방의 가슴속에 강한 욕구를 불러일으켜라.  
 
-##### 2.사람의 호감을 얻는 6가지 방법  
+#### 2.사람의 호감을 얻는 6가지 방법  
   1)다른 사람에게 진정한 관심을 가져라.  
   2)웃어라(미소)  
   3)상대방에게는 자신의 이름이 사람의 입에서 나오는 가장 달콤하면서도 가장 중요한 말임을 기억하라.  
@@ -33,7 +33,7 @@
   5)상대방의 관심사에 관해 애기하라.  
   6)상대방이 인정받는다고 느끼게 하라. 그리고 진심으로 인정하라.  
 
-##### 3.상대방을 설득하는 12가지방법  
+#### 3.상대방을 설득하는 12가지방법  
   1)논쟁에서 이기는 방법은 논쟁을 피하는 것뿐이다.  
   2)상대의 의견을 존중하라. 상대의 잘못을 지적하지 말라.  
   3)잘못을 했을 경우에는 빨리, 분명하게 잘못을 인정하라.  
@@ -47,7 +47,7 @@
   11)당신의 생각을 극적으로 표현하라.  
   12)도전 의욕을 불러일으켜라.  
 
-##### 4.반감이나 반발없이 상대를 변화시키는 9가지 방법  
+#### 4.반감이나 반발없이 상대를 변화시키는 9가지 방법  
   1)칭찬과 솔직한 감사의 말로 시작하라.  
   2)상대의 실수를 간접적으로 지적하라.  
   3)상대를 비판하기 전에 자신의 잘못에 대해 먼저 얘기하라.  
@@ -58,9 +58,9 @@
   8)격려하라. 고쳐주고 싶은 잘못이 있으면 그것이 고치기 쉬운 것으로 보이게 하라. 상댁다 하기를 바라는 것은 하기 쉬운 것으로 보이게 하라.  
   9)내가 제안하는 것을 상대가 기꺼이 하게 만들어라  
 
-##### 5.기적을 일으키는 편지들  
+#### 5.기적을 일으키는 편지들  
 
-##### 6.행복한 가정을 만드는 7가지 비결  
+#### 6.행복한 가정을 만드는 7가지 비결  
   1)절대로 잔소리 하지 말라.  
   2)상대를 바꾸려 하지 말라.  
   3)비난하지 말라.  
