Update 01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md

--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -135,3 +135,7 @@
 - 희생만을 강요하는 조직은 사람들에게 신뢰를 줄 수 없다. 노력한 만큼 그에 합당한 보상이 반드시 주어져야하고, 그 보상은 공정해야한다.  
 - 말로만 상찬할 뿌 진정한 보상이 없다면 아무도 따르지 않는다.  
 
+#### 3-6. 진심을 담은 한마디가 상대에게 힘껏 다가가는 힘이 된다.  
+> 이 세상에 나를 알아주는 벗이 있다면 하늘 끝도 이웃처럼 가까우리라.  
+- 진정한 우정이란, 지기, 나의 장점을 알아주는 것 못지않게 나의 부족함도 알고 감싸주는 사람이 진정한 친구다.  
+
