--- a/01_인문학/02_데일카네기 인간관계론.md
+++ b/01_인문학/02_데일카네기 인간관계론.md
@@ -17,12 +17,14 @@
 ### 인간관계론 개선방법 요약
 
 #### 1.사람을 다루는 기본 테크닉  
-#####  1)사람들에 대한 비판, 비난, 불평을 삼가라  
+#####  1)사람들에 대한 비판, 비난, 불평을 삼가라('꿀을 얻으려면 벌집을 건드리지 마라')  
    - 인간의 본성은 잘못을 저질러 놓고도 남을 탓하고 결코 자신의 잘못은 인저하지 않는게 인간이다.  
    - 비난은 언제나 다시 돌아온다. 바로 잡아 주고 싶거나 비난하려는 사람은 스스로를 정당화할 뿐만 아니라, 거꾸로 우리에게 비난을 퍼부을 것이다.
    - 사람을 비판하거나 비난하거나, 불평이나 잔소리를 늘어놓는 건 어떤 바보라도 할 수 있다. 이해하고 용서하는 것은 뛰어난 품성과 자제력을 갖춘 사람만이 할 수 있다.  
    
-  2)솔직하고 진지하게 칭찬하라.  
+##### 2)솔직하고 진지하게 칭찬하라.(인관관계의 핵심비결)  
+   - 프로이트: 인간 행동의 두가지 동기 1)성적 충동 2)위대한 사람이 되려는 욕망(인정받는 인물이 되고자 하는 욕망)  
+   - 고액 연봉자의 특징->사람을 다루는 능력->사람들로부터 열정을 불러일으키는 능력->칭찬과 격려  
   3)상대방의 가슴속에 강한 욕구를 불러일으켜라.  
 
 #### 2.사람의 호감을 얻는 6가지 방법  
