--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -139,3 +139,9 @@
 > 이 세상에 나를 알아주는 벗이 있다면 하늘 끝도 이웃처럼 가까우리라.  
 - 진정한 우정이란, 지기, 나의 장점을 알아주는 것 못지않게 나의 부족함도 알고 감싸주는 사람이 진정한 친구다.  
 
+#### 3-7. 마음 깊은 곳에서 우러나는 흐느낌에 귀를 기울여야 한다.
+> 모든 사물은 평안함을 얻지 못할 때 운다.
+
+#### 3-8. 박수 칠 때 떠나야 아름답게 이별할 수 있다.
+> 오동나무 꽃 가득한 산길에, 어린 봉황이 늙은 봉황보다 청아한 소리를 내는구나(`당 이상은')    
+- 떠날 때를 알고 뒤를 이을 사람에게 진심으로 축복할 줄 아는 사람은 사람들의 진심어린 존경을 받을 수 있다. 그리고 그가 머물렀던 자리에는 향기가 난다.  
