--- a/01_인문학/02_데일카네기 인간관계론.md
+++ b/01_인문학/02_데일카네기 인간관계론.md
@@ -18,14 +18,18 @@
 
 #### 1.사람을 다루는 기본 테크닉  
 #####  1)사람들에 대한 비판, 비난, 불평을 삼가라('꿀을 얻으려면 벌집을 건드리지 마라')  
-   - 인간의 본성은 잘못을 저질러 놓고도 남을 탓하고 결코 자신의 잘못은 인저하지 않는게 인간이다.  
+   - 인간의 본성은 잘못을 저질러 놓고도 남을 탓하고 결코 자신의 잘못은 인정하지 않는게 인간이다.  
    - 비난은 언제나 다시 돌아온다. 바로 잡아 주고 싶거나 비난하려는 사람은 스스로를 정당화할 뿐만 아니라, 거꾸로 우리에게 비난을 퍼부을 것이다.
    - 사람을 비판하거나 비난하거나, 불평이나 잔소리를 늘어놓는 건 어떤 바보라도 할 수 있다. 이해하고 용서하는 것은 뛰어난 품성과 자제력을 갖춘 사람만이 할 수 있다.  
    
 ##### 2)솔직하고 진지하게 칭찬하라.(인관관계의 핵심비결)  
    - 프로이트: 인간 행동의 두가지 동기 1)성적 충동 2)위대한 사람이 되려는 욕망(인정받는 인물이 되고자 하는 욕망)  
    - 고액 연봉자의 특징->사람을 다루는 능력->사람들로부터 열정을 불러일으키는 능력->칭찬과 격려  
-  3)상대방의 가슴속에 강한 욕구를 불러일으켜라.  
+##### 3)상대방의 가슴속에 강한 욕구를 불러일으켜라. (상대방의 관점에서 사물을 보지 못하면 외로운 길을 가리라)  
+   - 다른 사람을 움직일 수 있는 유일한 방법은 그가 원하는 것에 대해 얘기를 나누고, 그것을 어떻게 얻을 수 있는지 보여주는 것이다.  
+   - 상대방이 무엇을 원하는지, 그것을 어떻게 얻을 수 있는지에 관해서 주목하고 얘기하라.  
+   - 다른 사람의 사고방식을 이해하고, 그 사람의 처지에서 사물을 볼 줄 아는 사람은 미래를 걱정할 필요가 전혀 없다.  
+   - 상대방의 가슴속에 강한 욕구를 불러일으켜라. 이렇게 할 수 있는 사람은 세상을 얻을 것이고, 그렇지 않는 사람은 외로운 길을 갈 수 밖에 없다.(오버스트릿 교수)  
 
 #### 2.사람의 호감을 얻는 6가지 방법  
   1)다른 사람에게 진정한 관심을 가져라.  
