Update 01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md

--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -145,3 +145,10 @@
 #### 3-8. 박수 칠 때 떠나야 아름답게 이별할 수 있다.
 > 오동나무 꽃 가득한 산길에, 어린 봉황이 늙은 봉황보다 청아한 소리를 내는구나(`당 이상은')    
 - 떠날 때를 알고 뒤를 이을 사람에게 진심으로 축복할 줄 아는 사람은 사람들의 진심어린 존경을 받을 수 있다. 그리고 그가 머물렀던 자리에는 향기가 난다.  
+
+#### 3-9. 위로는 충고가 아니라 고백과 공감이다.  
+> 옛 책을 백번 읽어도 싫증내지 않았으니 숙독하고 깊이 생각하면 그대 스스로 알게 되리.  
+- 지금은 비록 실패했을지라도 그것이 반드시 실력을 말하는 것이 아니라는 믿음을 보여준다면 다시 일어설 힘을 얻게 된다.  
+
+
+
