Update 01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md

--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -149,6 +149,17 @@
 #### 3-9. 위로는 충고가 아니라 고백과 공감이다.  
 > 옛 책을 백번 읽어도 싫증내지 않았으니 숙독하고 깊이 생각하면 그대 스스로 알게 되리.  
 - 지금은 비록 실패했을지라도 그것이 반드시 실력을 말하는 것이 아니라는 믿음을 보여준다면 다시 일어설 힘을 얻게 된다.  
+<br>
 
+## 치: 주변을 장악하고 길을 제시해주는 깊이      
+<br>
+
+### 4. 청정함으로 멀리 들여다보는 것이 통찰이다(영정치원)   
+<br>
+
+#### 4-1. 한번의 확신을 가지기 위해 만번을 준비한다  
+> 한해의 계획은 봄에 세워야 하고 하루의 계획은 새벽에 세워야 한다.  
+- 먼저 일을 시작하기 전에는 반드시 마음의 준비와 각오를 다져야 한다.  
+- 치밀한 계획은 일의 진행 과정과 결과를 예측가능하게 만든다.  
 
 
