--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -162,4 +162,8 @@
 - 먼저 일을 시작하기 전에는 반드시 마음의 준비와 각오를 다져야 한다.  
 - 치밀한 계획은 일의 진행 과정과 결과를 예측가능하게 만든다.  
 
-
+#### 4-2. 성공시키는 것이 아니라 다시 도전하는 것이 힘이다.
+> 화는 복이 의지하는 바이고, 복은 화가 잠복하는 곳이다.
+- '새옹지마'와 같은 의미: 인생사의 변화무쌍함은 예측하기 어려우니 이릐일비하지 말라.  
+- 운명론적인 의미이지만, 나 자신이 변화해야 하고 반드시 자기 노력이 선행되어야 한다.  
+- 설사 지금은 어렵더라도 포기하지 않고 자신을 변화시켜 나간다면 반드시 일어설 기회를 얻을 수 있다.  
