--- a/01_인문학/02_데일카네기 인간관계론.md
+++ b/01_인문학/02_데일카네기 인간관계론.md
@@ -30,6 +30,7 @@
    - 상대방이 무엇을 원하는지, 그것을 어떻게 얻을 수 있는지에 관해서 주목하고 얘기하라.  
    - 다른 사람의 사고방식을 이해하고, 그 사람의 처지에서 사물을 볼 줄 아는 사람은 미래를 걱정할 필요가 전혀 없다.  
    - 상대방의 가슴속에 강한 욕구를 불러일으켜라. 이렇게 할 수 있는 사람은 세상을 얻을 것이고, 그렇지 않는 사람은 외로운 길을 갈 수 밖에 없다.(오버스트릿 교수)  
+   - 성공을 위한 비결이 하나 있다면 그것은 상대방의 관점을 이해하고, 내 관점뿐 아니라 상대방의 관점에서 사물을 보는 능력이다.
 
 #### 2.사람의 호감을 얻는 6가지 방법  
   1)다른 사람에게 진정한 관심을 가져라.  
