--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -164,6 +164,13 @@
 
 #### 4-2. 성공시키는 것이 아니라 다시 도전하는 것이 힘이다.
 > 화는 복이 의지하는 바이고, 복은 화가 잠복하는 곳이다.
-- '새옹지마'와 같은 의미: 인생사의 변화무쌍함은 예측하기 어려우니 이릐일비하지 말라.  
+- '새옹지마'와 같은 의미: 인생사의 변화무쌍함은 예측하기 어려우니 일희일비하지 말라.  
 - 운명론적인 의미이지만, 나 자신이 변화해야 하고 반드시 자기 노력이 선행되어야 한다.  
 - 설사 지금은 어렵더라도 포기하지 않고 자신을 변화시켜 나간다면 반드시 일어설 기회를 얻을 수 있다.  
+
+#### 4-3. 위대함은 흔하고 사소한 데에서 시작된다.  
+> 아름드리나무도 털끝 같은 씨앗에서 나오고, 높은 누대도 한 무더기 흙을 쌓는 데에서 시작되고, 천릿길도 한 걸음에서 시작된다.  
+- 비록 지금 당장은 하찮아 보이는 일이라고 해도 과감하게 그 일을 시작하고, 어떤 어려움에서도 포기하지 않아야 큰 결과를 만들수 있다.  
+- 성공의 비결은 평범한 사람보다 조금, 아주 조금만 더 잘하는것! 위대함을 만드는 것은 실제로도 평범함과 종이 한 장의 차이에 불과하다.  
+- 직장 생활은 장기전이다. 인생의 모든 측면이 그렇다.  
+
