--- a/01_인문학/02_데일카네기 인간관계론.md
+++ b/01_인문학/02_데일카네기 인간관계론.md
@@ -33,7 +33,10 @@
    - 성공을 위한 비결이 하나 있다면 그것은 상대방의 관점을 이해하고, 내 관점뿐 아니라 상대방의 관점에서 사물을 보는 능력이다.
 
 #### 2.사람의 호감을 얻는 6가지 방법  
-  1)다른 사람에게 진정한 관심을 가져라.  
+##### 1)다른 사람에게 진정한 관심(이름,나이,생일,가족,본적,성격,관심사)을 가져라.
+- 세상에서 제일 바쁜 사람이라 하더라도 진정으로 그 사람에게 관심을 기울이면, 그 사람으로부터 관심과 시간과 협력을 이끌어낼 수 있다  
+- 친구를 만들고 싶다면 다른 사람을 위해 뭔가 해주려고 노력해야 한다.  
+- 우리는 우리에게 관심을 갖는 사람들에게 관심을 갖는다.  
   2)웃어라(미소)  
   3)상대방에게는 자신의 이름이 사람의 입에서 나오는 가장 달콤하면서도 가장 중요한 말임을 기억하라.  
   4)잘 듣는 사람이 되어라. 상대방이 스스로에 대해 얘기하도록 이끌어라.  
