Update 01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md

--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -174,3 +174,8 @@
 - 성공의 비결은 평범한 사람보다 조금, 아주 조금만 더 잘하는것! 위대함을 만드는 것은 실제로도 평범함과 종이 한 장의 차이에 불과하다.  
 - 직장 생활은 장기전이다. 인생의 모든 측면이 그렇다.  
 
+#### 4-4. 만 번을 준비할 수 있었던 고수의 비결, 즐거움  
+> 아는 사람은 좋아하는 사람만 못하고 좋아하는 사람은 즐기는 사람보다 못하다.  
+- 단순히 아는 것을 지(知) 단계라고 한다면, 호(好)는 공부가 좋아서 계속하는단계, 공부가 자신이 추구하는 인생의 목적과 삶의 가치가 될때 락(樂)의 단계  - 뇌는 새로운 학습을 좋아한다. 무엇인가를 배우면 배울수록 뇌는 더욱 활성화되고 기억을 담당하는 해마의 신경세포는 점점 더 증식된다. 뇌는 뭔가를 달성할때 즐거움을 느낀다. 이때 우리 뇌는 그 기분 좋은 상태를 유지하기 위하여 도파민, 세로토닌 등의 쾌락보수물질을 방출한다.  
+
+
