Update 01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md

--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -179,4 +179,8 @@
 - 단순히 아는 것을 지(知) 단계라고 한다면, 호(好)는 공부가 좋아서 계속하는단계, 공부가 자신이 추구하는 인생의 목적과 삶의 가치가 될때 락(樂)의 단계   
 - 뇌는 새로운 학습을 좋아한다. 무엇인가를 배우면 배울수록 뇌는 더욱 활성화되고 기억을 담당하는 해마의 신경세포는 점점 더 증식된다. 뇌는 뭔가를 달성할때 즐거움을 느낀다. 이때 우리 뇌는 그 기분 좋은 상태를 유지하기 위하여 도파민, 세로토닌 등의 쾌락보수물질을 방출한다.  
 
+#### 4-5. 복잡한 문제에서 스스로를 맑게 다스리면 생각이 멀리까지 미친다.  
+> 담박하지 않으면 뜻을 밝힐 수 없고, 고요하지 않으면 멀리 이를 수 없다.  
+- 사람의 마음을 읽고 오늘의 현상을 통해 미래를 전망하는 통찰력이 필요하다. 
+
 
