--- a/01_인문학/02_데일카네기 인간관계론.md
+++ b/01_인문학/02_데일카네기 인간관계론.md
@@ -37,11 +37,17 @@
 - 세상에서 제일 바쁜 사람이라 하더라도 진정으로 그 사람에게 관심을 기울이면, 그 사람으로부터 관심과 시간과 협력을 이끌어낼 수 있다  
 - 친구를 만들고 싶다면 다른 사람을 위해 뭔가 해주려고 노력해야 한다.  
 - 우리는 우리에게 관심을 갖는 사람들에게 관심을 갖는다.  
+##### 2)웃어라(미소)  
+- 내가 웃음을 보낸 모든 사람들이 웃음으로 나를 맞아준다.  
+- 억지로라도 웃으려고 노력하라, 이미 행복한 사람인 것처럼 행동하라 그러면 저절로 행복해질 것이다.  
+- 인간을 행복하게 또는 불행하게 만드는 것은 가진 재산이나 지위, 직업이 아니다. 인간의 행복과 불행은 행복에 대해 어떤 생각을 갖고 있느냐에 따라 결정된다.  
+- 에이브러햄 링컨 : 대부분의 사람들은 자신이 행복하고자 마음먹는 만큼 행복하다.  
+- 당신이 품은 생각이 매 시간 당신을 그 모습으로 변화시킬 것이다. 생각이 모든 것을 지배한다.  
 
-  2)웃어라(미소)  
   3)상대방에게는 자신의 이름이 사람의 입에서 나오는 가장 달콤하면서도 가장 중요한 말임을 기억하라.  
   4)잘 듣는 사람이 되어라. 상대방이 스스로에 대해 얘기하도록 이끌어라.  
-  > '여러분에게 얘기를 건네는 사람은 여러분이나 여러분의 문제보다 자신과 자신의 희망, 자신의 문제에 수백 배나 더 관심이 많다는 사실을 명심하자'     
+  > 여러분에게 얘기를 건네는 사람은 여러분이나 여러분의 문제보다 자신과 자신의 희망, 자신의 문제에 수백 배나 더 관심이 많다는 사실을 명심하자  
+  
   5)상대방의 관심사에 관해 애기하라.  
   6)상대방이 인정받는다고 느끼게 하라. 그리고 진심으로 인정하라.  
 
