Update 01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md

--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -183,4 +183,7 @@
 > 담박하지 않으면 뜻을 밝힐 수 없고, 고요하지 않으면 멀리 이를 수 없다.  
 - 사람의 마음을 읽고 오늘의 현상을 통해 미래를 전망하는 통찰력이 필요하다. 
 
+#### 4-6. 한 발 물러서서 스스로를 관찰하면 정답이 보인다.  
+> 바둑을 두는 사람보다 옆에서 구경하는 사람이 수를 더 잘 본다.  
+- 리더는 멀리 내다보며 올바른 방향을 잡아주고, 전체를 조망해 조화를 이루고, 발생 가능한 문제를 예상해 사저에 대처하도록 해야한다. 망망대해를 항해하는 대형선박의 선장과도 같다.  
 
