--- a/01_인문학/02_데일카네기 인간관계론.md
+++ b/01_인문학/02_데일카네기 인간관계론.md
@@ -44,7 +44,11 @@
 - 에이브러햄 링컨 : 대부분의 사람들은 자신이 행복하고자 마음먹는 만큼 행복하다.  
 - 당신이 품은 생각이 매 시간 당신을 그 모습으로 변화시킬 것이다. 생각이 모든 것을 지배한다.  
 
-  3)상대방에게는 자신의 이름이 사람의 입에서 나오는 가장 달콤하면서도 가장 중요한 말임을 기억하라.  
+##### 3)상대방에게는 자신의 이름이 사람의 입에서 나오는 가장 달콤하면서도 가장 중요한 말임을 기억하라.  
+- 상대방의 이름을 기억하고 그가 인정받는다는 느낌을 가질 수 있게 하는 것이 호의를 얻는 가장 중요한 방법이다.  
+- "예절은 작은 희생들로 이루어져 있다" (시간을 투자해서 이름을 외우도록 노력해야한다...)  
+
+
   4)잘 듣는 사람이 되어라. 상대방이 스스로에 대해 얘기하도록 이끌어라.  
   > 여러분에게 얘기를 건네는 사람은 여러분이나 여러분의 문제보다 자신과 자신의 희망, 자신의 문제에 수백 배나 더 관심이 많다는 사실을 명심하자  
   
