Update 01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md

--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -187,3 +187,7 @@
 > 바둑을 두는 사람보다 옆에서 구경하는 사람이 수를 더 잘 본다.  
 - 리더는 멀리 내다보며 올바른 방향을 잡아주고, 전체를 조망해 조화를 이루고, 발생 가능한 문제를 예상해 사저에 대처하도록 해야한다. 망망대해를 항해하는 대형선박의 선장과도 같다.  
 
+#### 4-7. 이루고 싶은 이상이 있다면 한단계 더 올라서라  
+> 천 리 밖까지 바라보고자 다시 누각을 한 층 더 오르네.  
+- 청년들에게 높은 이상이 있다면 반드시 그에 합당한 노력이 뒷받침되어야 한다는 뜻에서 인용하면 좋은 말이다.  
+
