--- a/01_인문학/02_데일카네기 인간관계론.md
+++ b/01_인문학/02_데일카네기 인간관계론.md
@@ -48,9 +48,10 @@
 - 상대방의 이름을 기억하고 그가 인정받는다는 느낌을 가질 수 있게 하는 것이 호의를 얻는 가장 중요한 방법이다.  
 - "예절은 작은 희생들로 이루어져 있다" (시간을 투자해서 이름을 외우도록 노력해야한다...)  
 
-
-  4)잘 듣는 사람이 되어라. 상대방이 스스로에 대해 얘기하도록 이끌어라.  
-  > 여러분에게 얘기를 건네는 사람은 여러분이나 여러분의 문제보다 자신과 자신의 희망, 자신의 문제에 수백 배나 더 관심이 많다는 사실을 명심하자  
+##### 4)잘 듣는 사람이 되어라. 상대방이 스스로에 대해 얘기하도록 이끌어라.  
+- 상대방의 얘기를 열중해서 들어주는 것은 거의 모든 사람이 좋아할 수밖에 없는 은근한 아부다.  
+- 상대방의 얘기를 들어주지 않는 사람은, 자기 자신에 만 빠져 있고, 자신만 중요한 줄 아는 그런 사람은 우리를 지루하게 만든다.  
+- 여러분에게 얘기를 건네는 사람은 여러분이나 여러분의 문제보다 자신과 자신의 희망, 자신의 문제에 수백 배나 더 관심이 많다는 사실을 명심하자    
   
   5)상대방의 관심사에 관해 애기하라.  
   6)상대방이 인정받는다고 느끼게 하라. 그리고 진심으로 인정하라.  
