--- a/01_인문학/02_데일카네기 인간관계론.md
+++ b/01_인문학/02_데일카네기 인간관계론.md
@@ -53,11 +53,14 @@
 - 상대방의 얘기를 들어주지 않는 사람은, 자기 자신에 만 빠져 있고, 자신만 중요한 줄 아는 그런 사람은 우리를 지루하게 만든다.  
 - 여러분에게 얘기를 건네는 사람은 여러분이나 여러분의 문제보다 자신과 자신의 희망, 자신의 문제에 수백 배나 더 관심이 많다는 사실을 명심하자    
   
-  5)상대방의 관심사에 관해 애기하라.  
-  6)상대방이 인정받는다고 느끼게 하라. 그리고 진심으로 인정하라.  
+##### 5)상대방의 관심사에 관해 애기하라.  
+##### 6)상대방이 인정받는다고 느끼게 하라. 그리고 진심으로 인정하라.  
 
 #### 3.상대방을 설득하는 12가지방법  
-  1)논쟁에서 이기는 방법은 논쟁을 피하는 것뿐이다.  
+##### 1)논쟁에서 이기는 방법은 논쟁을 피하는 것뿐이다.  
+- 항상 날카로운 대립을 피해라.  
+- 논쟁하고 괴롭히고 반박하다보면 승리할 때도 있을 것이다. 하지만 그 승리는 공허한 승리다. 그렇게 해서는 결코 상대방의 호의를 끌어낼 수 없기 때문이다.  
+- 오해 또한 논쟁을 해서 풀리지 않는다. 상대의 심정을 헤아려 적절히 대응하고, 상대를 위로할 때, 그리고 상대방 관점에서 보고자 할 때에야 풀리게 돼 있다.  
   2)상대의 의견을 존중하라. 상대의 잘못을 지적하지 말라.  
   3)잘못을 했을 경우에는 빨리, 분명하게 잘못을 인정하라.  
   4)우호적으로 시작하라.  
