Update 01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md

--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -191,3 +191,8 @@
 > 천 리 밖까지 바라보고자 다시 누각을 한 층 더 오르네.  
 - 청년들에게 높은 이상이 있다면 반드시 그에 합당한 노력이 뒷받침되어야 한다는 뜻에서 인용하면 좋은 말이다.  
 
+#### 4-8. 붕새가 날개를 펴면 어디까지 날지 감히 짐작할 수 없다.  
+> 바다는 광활해 물고기 뛰어놀고 하늘은 높아 새들이 날아오른다.  
+- 자신이 이루고 싶은 꿈이 있다면 지금의 환경과 한계를 벗어나 과감하게 도전할 수 있어야 한다. 그 첫 번째 순서는 바로 그 꿈을 꾸는 것이다.  
+- 때로는 구체적인 가르침보다 크고 웅대한 그림을 그려주는 비유가 더 깊이 가슴을 새겨지기도 한다. 미래를 스스로 상상하게 만들어주기 때문이다.  
+
