Update 01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md

--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -196,3 +196,10 @@
 - 자신이 이루고 싶은 꿈이 있다면 지금의 환경과 한계를 벗어나 과감하게 도전할 수 있어야 한다. 그 첫 번째 순서는 바로 그 꿈을 꾸는 것이다.  
 - 때로는 구체적인 가르침보다 크고 웅대한 그림을 그려주는 비유가 더 깊이 가슴을 새겨지기도 한다. 미래를 스스로 상상하게 만들어주기 때문이다.  
 
+#### 4-9. 지도자는 급박한 상황에서도 여유와 감성으로 상황을 다스린다.  
+> 어젯밤 가을바람에 푸른 나무 시들었네.   
+> 홀로 높은 누대에 올라 하늘 끝땋은 길을 빠짐없이 바라보네.  
+- 실력을 쌓지 않고 높은 이상만 생각한다면 꿈은 당연히 이룰 수 없다.(공을 자신의 안에 쌓는 것, 공부)  
+- 성공은 어떤 자질을 타고 났는냐가 아니라 얼마나 열심히 노력했는냐에 따라 결정된다.  
+- 마음이 정한 사람은 그 말도 신중하고 여유가 있고, 마음이 안정되지 못하면 그 말이 속되고 급하다.  
+
