Update 01_알고리즘 문제해결 전략.md

--- a/06_알고리즘/01_알고리즘 문제해결 전략.md
+++ b/06_알고리즘/01_알고리즘 문제해결 전략.md
@@ -1,3 +1,13 @@
-# 알고리즘(Algorithm)  
+# (프로그래밍 대횡서 배우는) 알고리즘 문제해결전략  
 
-### 1. (프로그래밍 대횡서 배우는) 알고리즘 문제해결전략  
+### 01. 문제해결 개관
+- 문제 해결 과정  
+1. 문제를 읽고 이해  
+2. 재정의와 추상화  
+3. 풀이 계획  
+4. 계획 검증  
+5. 구현  
+6. 회고  
+
+
+
