--- a/10_육아서/01_아빠가 나서면 아이가 다르다.md
+++ b/10_육아서/01_아빠가 나서면 아이가 다르다.md
@@ -1,1 +1,28 @@
 
+- 저자: 정우열(정신과 전문의)  
+
+### 1. 아빠와 함께 자란 아이는 다르다.
+
+* 다른건 몰라도 목욕만큼은 꼭 아빠가
+: 아빠가 3~4회 목욕을 시켜준 아이들은 이러한 경우(심각한 교우 관계문제)가 3퍼센트에 불과했다. 아빠와의 신체 접촉과 따뜻한 목욕물이 시너지를 일으켜 옥시토신 호르몬을 충분히 분비시켜 사회성 발달에 도움을 주기 때문이다.  
+
+* 과감한 쿨 대디가 아이에게 보여주는 세상(아빠의 과감함이 아이의 자존감과 오감을 책임진다)  
+- 음식을 흘리는 동안 아이의 자존감은 발달한다. 
+: 만 3세가 될 때까지는 그러한 훈육(음식을 흘릴때 훈육하는)은 거의 효과가 없을뿐더라 좌절감과 불필요한 수치심으 유발할 수도 있다. 아이의 뇌가 아직은 훈육을 이해하거나 총동을 조절할만큼 발달하지 못했기 때문이다.  
+: 식사예절 교육은 만3세  이후에 해도 결코 늦지 않다. 엄마의 식습과 또는 어린이집 등 단체생활을 하면서 다른아이들을 따라하게 된다. 오히려 그 전에는 아이가 하고 싶은 대로 하도록 두는 것이 자존감 발달의 발판이 된다.
+: '흘려도 내가 하고 싶은 대로 할 거야'라는 아이의 탐험욕구를 충적시켜주면, 흘리는 음식과는 감히 비교할 수 없을 정도의 자존감이 발달한다. 자기가 하고싶은 대로 하게 해주면 아이는 '내가 최고야'라는 느낌을 가지게 되는데, 이 느낌을 충분히 느끼게 해주는 것이 자존감 발달의 지름길이기 때문이다.  
+
+- 오감 발달과 소근육 발달은 보너스
+- 아이가 흘린다고 야단치거나, 바로 딱아내지 말라!
+: 음식을 흘리는 이유는 소근육이 충분히 발달하지 못했기 때문이다. 이때 삭사 교육을 한답시고 음식을 흘렸다고 나무라면 교육은커녕 주눅이 들어 오히려 숟가락을 이용하는 시기를 늦출 수도 있다. 도움을 받고 싶어할때 숟가락을 아이와 함께 잡고 입에 가져다주는 것이 자연스럽게 배울수 있어 효과적이다.  
+
+### 2. 아이의 마음을 알면 방법이 보인다.
+
+- 부모라는 거울이 아이의 안정감을 보장한다.
+: 아이가 부모로부터 배우는 감정에 대한 경험은 부모라는 거울에 비춰지는 자신의 모습과 직결되고, 그것은 결국 마음속에 만들어지는 자신의 이미지가 된다.  
+: 아이가 심리적으로 안정되기 위해 필요한것은 이러한 거울로부터 오는 인정과 관심이다.
+- 아직 의사 표현을 못하는 우리 아이 어덯게 공감해줄 수 있을까?
+: 넘어져서 우는 아이-달래기 전에 먼저 '아이고 많이 아프지?;라고 아픔을 공감해주기
+: 갑자기 웃는 아이-아이의 입장에서 왜 웃는지 재빨리 파악후 이해하고 공감해주기  
+: 아이의 눈을 보고 말하기-아이는 부모의 목소리 톤고 크기 뿐아니라 눈빛에 더욱 집중해서 상황을 파악하기때문, 그러지 않으면 무관심으로 느껴질수 있다.  
+
