Update 01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md

--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -210,3 +210,7 @@
 #### 5-1. 사소한 타협으로 모든 것이 무너지는 가치, 도덕  
 > 선을 따르기는 산을 오르듯 어렵고, 악을 따르기는 담이 무너지듯 순간이다(국어)  
 
+#### 5-2. 내가 바르지 않으면 누구도 따르지 않는다
+> 자신의 몸이 바르면 명령하지 않아도 행해지고, 자신이 바르지 못하면 비록 명령해도 따르지 않는다.  
+- '수진제가치국평천한'(대학): 국가를 다스리고 천하를 안정시키는 꿈이 있다면 가까운 일부터 시작해야한다.  
+- 진정한 리더는 문제가 생격을 때 부하에게 책임을 묻기 전에 자신의 잘못을 먼저 돌아보고 책임을 지는 사람이다.   
