Update 01_아빠가 나서면 아이가 다르다.md

--- a/10_육아서/01_아빠가 나서면 아이가 다르다.md
+++ b/10_육아서/01_아빠가 나서면 아이가 다르다.md
@@ -25,4 +25,8 @@
 : 넘어져서 우는 아이-달래기 전에 먼저 '아이고 많이 아프지?;라고 아픔을 공감해주기  
 : 갑자기 웃는 아이-아이의 입장에서 왜 웃는지 재빨리 파악후 이해하고 공감해주기    
 : 아이의 눈을 보고 말하기-아이는 부모의 목소리 톤고 크기 뿐아니라 눈빛에 더욱 집중해서 상황을 파악하기때문, 그러지 않으면 무관심으로 느껴질수 있다.   
+- 공감받아본 아이가 다른 아이를 공감할 수 있다  
+: 아이의 공감 능력을 키워주기 위해서는 부모가 먼저 아이를 공감해줘야한다.  
+: 자신의 감정을 정확하게 이해하고 적극적으로 반응해주는 부모를 통해 어린 시절부터 공감받는 느낌을 충분히 받으면 자연스럽게 공감 능력이 형성된다.  
+
 
