Update 01_자연어 처리 딥러닝 캠프(김기현).md

--- a/03_IT_AI/01_자연어 처리 딥러닝 캠프(김기현).md
+++ b/03_IT_AI/01_자연어 처리 딥러닝 캠프(김기현).md
@@ -6,20 +6,23 @@
 
 
 ### 4장. 전처리
-#### 4-5)분절: 쉼표, 인용표등 띄어쓰기 추가
-#### 4-7)서브워드 분절: 조합된 단어를 다시 세분화하여 분리
+#### 4-5)분절: 쉼표, 인용표등 띄어쓰기 추가 (p.127)  
+#### 4-7)서브워드 분절: 조합된 단어를 다시 세분화하여 분리 (p.136)  
+ > UNK를 줄일 수 있음.  
 #### 4-8)분절복원
 #### 4-9)토치텍스트: text처리에 필요한 다양한 library이미 존재
 
 ### 5장. 유사성과 모호성
 - 특징벡터 추출(data mining?)
 - 유사성과 모호성: 복수표현, 조사에 따른 문법변화 등등 자연어 처리의 난관 존재?
+ > 단어의 중의성 해소(WSD) : NLTK 워드넷 활용가능(p.161, p.182)  
 
 ### 6장. 단어 임베딩
+- 차원축소  
 - 흔한 오해1: pre-trained vec는 특정 도메인에 최적화 된 모델이 아니므로, 효과가 낮을수 있다  
    (기본 모델-> 성능개선 방안의 하나로 pre-trained를 활용하는걸 추천)  
 #### 6.5 Glove: 단어의 사전적 확률 분포로 판단
-#### 6.6 FastText 예
+#### 6.6 FastText 예 (build 예제, p.210)  
 
 ### 7장. 시퀀스 모델링
 #### 7.3 LSTM => 케라스에서 Dense(fully connected)말고 LSTM이나 GRU로 돌려보기
@@ -27,7 +30,11 @@
 #### 7.5 Gradient 클리핑
 
 ### 8장. 텍스트 분류
-- RNN 예제
+- RNN : 전체맥락 + 의미에 집중  
+- CNN : 단어조합 + 패턴에 집중  
+- RNN + CNN을 조합한 앙상블 모델: 성능개선에 효과볼 수 있음  
+*** 멀티 Label 분류
+> ex) 가격은 좋은데 배송이 늦음 : 가격(상), 배송(하)  
 
 ### 9장. 언어모델링
 #### 9.2 n-gram: n-gram방식으로 임베딩 vec 직접 구현?
