--- a/10_육아서/01_아빠가 나서면 아이가 다르다.md
+++ b/10_육아서/01_아빠가 나서면 아이가 다르다.md
@@ -29,4 +29,17 @@
 : 아이의 공감 능력을 키워주기 위해서는 부모가 먼저 아이를 공감해줘야한다.  
 : 자신의 감정을 정확하게 이해하고 적극적으로 반응해주는 부모를 통해 어린 시절부터 공감받는 느낌을 충분히 받으면 자연스럽게 공감 능력이 형성된다.  
 
+- 아빠 어디가? 아빠 어디 안 가  
+: 아이의 분리불안은 충분히 좋은 엄마/아빠(good enough Mother)로써 극복할 수 있다. 아이에게 가장 큰 편안함을 주는 대상이 안전한 환경과 아이가 원할 때에 아이가 원하는 것을 해주는면 아이는 안정감을 느낀다.  
+: 충분히 좋은 엄마가 양육하면 아이는 좌절을 견디는 힘이 강해진다. 아이가 세상을 탐색하다가 좌절하거나, 화가 날 때에 엄마가 바로 충분히 지지해주기 때문이다.  
+
+- 혹시 아이가 부모를 따라하고 있진 않나요?  
+* 애착 : 애정적인 유대관계  
+: 바람직한 양육을 위해서는 애착->본 보이기(모델링)->훈육의 순서로 진행되어야 한다.  
+: 권위 있는 부모는 아이의 복종을 기대하더라도 먼저 배려하고 존중해준다. 이런 부모 밑에서 자란 아이들은 자기통제력, 자기신뢰도, 사회성이 높은 특징이 있다.  
+
+- 떼스는 아이, 지피지기면 백전백승 
+: 신체 발달로 내 마음대로 할수 있는 것들이 늘어나 한참 신이 나 있는 상황에서, 부모가 그것을 막으니 좌절과 동시에 분노가 일어나는 것이다. 그리고 감정조절을 할 수 있는 만큼 뇌가 발달하지 못해서, 그대로 표출하는 현상이 바로 떼를 쓰는 것이다.  
+: '싫어'라고 의사 표현 행동으로 하는것이 부모 입장에서 떼쓰기로 여기지기도 한다. 좋게 생각하면 아이가 주도적인 입장에서 독립선언을 하는 것으로 볼수 있다. '싫어'라고 말한 뒤에는 나름의 대안을 제시해야하는 것이고, 그만틈 아 스스로 행동에 책임질 기회가 생기는 것이기 때문이다.  
+: 먼저 아이의 좌절감과 분노를 공감해주자.  
 
