Update 01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md

--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -214,3 +214,9 @@
 > 자신의 몸이 바르면 명령하지 않아도 행해지고, 자신이 바르지 못하면 비록 명령해도 따르지 않는다.  
 - '수진제가치국평천한'(대학): 국가를 다스리고 천하를 안정시키는 꿈이 있다면 가까운 일부터 시작해야한다.  
 - 진정한 리더는 문제가 생격을 때 부하에게 책임을 묻기 전에 자신의 잘못을 먼저 돌아보고 책임을 지는 사람이다.   
+
+#### 5-3. 강한 조직은 복수의 합이 아니라 거대한 단수다
+> 대도가 행해지면 천하가 공공의 것이다. (대도지행 천하위공)
+- 오늘날 얘기하는 진정한 복지사회의 조건을 갖춘 이상적인 사회  
+- 리더는 극단적 이기주의와 개인주의로부터 이들의 마음을 하나로 묶어 한방향을 바라보도록 만들어야 한다.  
+- 그 전제는 공정과 정의가 지켜지는 것(하늘은 사사로이 덮는 것이 없고 땅은 사사로이 싣는걷이 없으며 해와 달은 사사로이 비추는 일이 없다)  
