--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -220,3 +220,12 @@
 - 오늘날 얘기하는 진정한 복지사회의 조건을 갖춘 이상적인 사회  
 - 리더는 극단적 이기주의와 개인주의로부터 이들의 마음을 하나로 묶어 한방향을 바라보도록 만들어야 한다.  
 - 그 전제는 공정과 정의가 지켜지는 것(하늘은 사사로이 덮는 것이 없고 땅은 사사로이 싣는걷이 없으며 해와 달은 사사로이 비추는 일이 없다)  
+
+#### 5-4. 급박한 상황일수록 휘둘리지 말고 휘둘러야 한다.  
+> 길은 아득히 멀기만 하네. 나는 위아래로 탐구해 보겠노라.  
+- 어떠한 상황에서도 흔들리지 않고 담대하게 비전을 제시할 수 있는 힘이 진정한 리더의 자질이다.   
+
+#### 5-5. 인맥은 찾아가는 것이 아니라 찾아오도록 하는 것이다.
+> 도에 맞으면 도우는 이가 많고 도에 어긋나면 도움을 얻기 힘들다.  
+- 힘과 권력을 내세우는 사람 곁에는 '교언영색'으로 비위를 맞추려는 사람만 들끓게 된다.  
+- 깨끗한 삶을 지키겠다는 각오로 살아온 이들에게는 강한 내공이 있는것이고, 이런 강한 내공을 가진 사람에게 사람들은 공감대를 가지고, 이런 공감의 힘이 다시 사람들을 끌어 모은다.  
