Update 01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md

--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -229,3 +229,6 @@
 > 도에 맞으면 도우는 이가 많고 도에 어긋나면 도움을 얻기 힘들다.  
 - 힘과 권력을 내세우는 사람 곁에는 '교언영색'으로 비위를 맞추려는 사람만 들끓게 된다.  
 - 깨끗한 삶을 지키겠다는 각오로 살아온 이들에게는 강한 내공이 있는것이고, 이런 강한 내공을 가진 사람에게 사람들은 공감대를 가지고, 이런 공감의 힘이 다시 사람들을 끌어 모은다.  
+
+#### 5-6. 어른이란 자신의 신념에 확신을 가진 당당한 존재다
+> 가난할 때 사귄 친구는 잊어선 안 되고 어려운 시절을 함께 했던 아내는 버려선 안된다.
