Update 01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md

--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -234,3 +234,8 @@
 
 #### 5-6. 어른이란 자신의 신념에 확신을 가진 당당한 존재다
 > 가난할 때 사귄 친구는 잊어선 안 되고 어려운 시절을 함께 했던 아내는 버려선 안된다.
+
+#### 5-7. 지도자란 무리안에서 가장 외로운 자다.
+> 천하 사람들이 근심하기에 앞서 근심하고, 천하 사람들이 즐긴 후에 즐긴다.   
+- 군자는 말을 아끼고 소인은 말을 앞세운다(장부일언중천금)  
+- 실천하지 않는 겉치레 말은 아무리 예쁘게 꾸민다고해도 사람의 마음을 건드리지 못한다.  
