Update 01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md

--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -239,3 +239,23 @@
 > 천하 사람들이 근심하기에 앞서 근심하고, 천하 사람들이 즐긴 후에 즐긴다.   
 - 군자는 말을 아끼고 소인은 말을 앞세운다(장부일언중천금)  
 - 실천하지 않는 겉치레 말은 아무리 예쁘게 꾸민다고해도 사람의 마음을 건드리지 못한다.  
+
+#### 5-8. 새는 양쪽의 날개가 있어야 하늘을 날 수 있다.  
+> 여산의 진면목을알수 없는 건 내 몸이 이 산중에 있기 때문이겠지.  
+- 고기양단(양쪽 끝을 두드린다), 한 쪽에 치우치지 않는 군형잡힌 시각으로 문제 해결.  
+- 상황과 사람을 균형 있게 판단하지 않고 한쪽으로 치우친 말을 해서는 사람을 일을 수 있다.  
+<br>
+
+### 6. 가르침이 곧 배움이고 배움이 곧 가르침이다.  
+
+#### 6-1. 새로운 것을 배우고 질문하기를 주저하지 않는 용기, 학문  
+> 영민하고 배우기를 좋아하며 아랫사람에게 묻기를 부끄러워하지 않는다.  
+- 공부에서 가장 귀한 것은 의문을 갖는 것이다. 의문을 가지면 해답이 열린다.  
+- 직원들 개개인의 공부는 조직의 미래에 투자하는 것이다.  
+
+#### 6-2. 받아들인 다음 내 것으로 소화해서 쏟아낼 수 있어야 공부다.  
+> 배우고 생각지 않으면 어리석어지고 생각만 하고 배우지 않으면 위태롭다.  
+- 마음은 생각하는 기능이 있기 때문에 사람이 생각을 하면 사리를 얻게 되고, 생각하지 않으면 사리를 알지 못한다.  
+- 배움이란 지식과 정보를 쌓는 데서 그치는 게 아니라, 그것을 정리하고 다르게 바라보는 생각이라는 과정을 거쳐야 이루어진다.  
+
+
