Update 01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md

--- a/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
+++ b/01_인문학/01_내가 단단해지는 새벽공부, 천년의 내공(조윤제).md
@@ -258,4 +258,6 @@
 - 마음은 생각하는 기능이 있기 때문에 사람이 생각을 하면 사리를 얻게 되고, 생각하지 않으면 사리를 알지 못한다.  
 - 배움이란 지식과 정보를 쌓는 데서 그치는 게 아니라, 그것을 정리하고 다르게 바라보는 생각이라는 과정을 거쳐야 이루어진다.  
 
-
+#### 6-3. 지혜롭고 어질고 욤감함, 평범하지만 실행하기 어려운 덕목  
+> 지혜로운 사람은 미혹당하지 않고, 어진 이는 근심하지 않고, 용감한 자는 두려워하지 않는다.  
+- 올바른 마음에서 비롯된 자존감과 긍지가 어떤 두려움에도 맞설 수 있는 진정한 용기를 준다.  
