--- a/01_인문학/03_결국해내는사람들의원칙.md
+++ b/01_인문학/03_결국해내는사람들의원칙.md
@@ -1,1 +1,5 @@
-#
+# 결국 해내는 사람들의 원칙
+
+- 목표설정/시작화/긍정의확언: 목표를 쥐고, 이미지화하고, 입으로 내뱉어라!  
+- 망상활성계(RAS:Reticular Activation System): 뇌의 수면-각성-집중 등에 관여하여 외부로부터 입력되는 정보의 Noise를 필터링하는 역할을 수행.  
+
