--- a/09_경제/01_최진기의경제상식.md
+++ b/09_경제/01_최진기의경제상식.md
@@ -1,1 +1,39 @@
 # 최진기의 경제상식 오늘부터 1일
+
+## 1. 고등학생도 아는 경제상식 다지기
+
+### 1-1. 경제학을 한줄로 줄이면?
+- 경제학은 선택의 기술을 가르치는 학문이다.(희소성의 원리, 공짜 점심은 없다.)  
+- 기회비용(어느하나를 선택함으로써 포기하는 가치중 가장 큰것), 매몰비용(이미 지출해서 회수할 수 없는 비용)  
+### 1-2. 재화와 서비스가 요리조리
+- 경제객체(경제활동의 대상), 재화(인간에게 효용을 주는 물리적인 것), 경제재(경제활동의 대상이 되는 유용성과 희소성을 가짐), 자유재(공기,물..)  
+- 서비스(형체는 없지만 가치가 있어서 돈을 지불하는것, 용역)  
+### 1-3. 경제 시스템의 네 선수가 준비, 땅!  
+- 경제주체(경제활동을 하는 개인이나 집단), 가계/은행/기업/정부  
+- 가계(생산요소 제공자, 소비주체), 기업(생산주체, 분배주체), 정부(세금회수,공공재 생산-사회간접자본(SOC, 도로/전력..)/공공서비스(치안/소방/국방..))  
+### 1-4. 생산, 분배, 소비를 골라보자
+- 소비는 경제의 기관차(한 나라의 경제력은 구매력을 갖춘 중산층 인구수와 비례)  
+### 1-5. 소비효과가 왁지지껄
+- 네트워크 효과: 밴드왜건 효과(유행에 따라 상품구매하는 편승효과), 스놉효과(한 상품의 소비가 증가할수록 수요하락, 속물효과)  
+- 베블런 효과(소비재의 가격 상승해도 수요가 증가하는 현상), 과시효과(전시효과, 시위효과), 의존효과(광고-소비자 욕구자극-소비증가), 투기효과  
+- 언더독 효과(약자가 이기기를 바라는 효과, 싸움에서 진 개)  
+### 1-6. 수요, 수요법칙이 슬금슬금  
+- 수요(재화나 서비스를 구입하려는 욕구), 수요법칙(재화의 가격이 상승하면 수요가 감소, 가격이 하락하면 수요가 증가)  
+- 대체재(꿩 대신 닭), 보완재(빵 더불어 잼이나 치즈)  
+### 1-7. 수요법칙에도 예외가 있어
+- 기펜재(가격이 내리지만 가치가 떨어져서 수요가 줄어듬, 연탄/고무신)  
+- 정상재(실직소득이 늘어나면 수요가 늘어나는 재화), 열등재(실질소득 늘어나면 수요감소)  
+### 1-8. 공급, 공급법칙에도 예외가 있어
+- 공급(교환하거나 판매하기 우해 시장에서 재화나 서비스 제공), 공급법칙(재화의 가격이 상승하면 공급량이 늘어나고, 가격이 내리면 공급량 감소)  
+- 독과점 기업(필수품이며 대체제가 없는 경우 일부러 공급을 늘리지 않는 경우도 있음, 석유...)  
+### 1-9. 수용의 가격 탄력성이 팽팽하게
+- 수요가격의 탄력성(가격 변화에 따른 수요량의 변화율)  
+- 사치품은 탄력적/필수품은 비탄력적  
+### 1-10. 공급의 가격 탄력성이 느슨하게 
+- 공산품(옷,노트북..)은 탄력성이 큼, 원자재(석유,농축산물..)은 공급의 가격 탄력성이 작음  
+### 1-11. 수요/공급법칙을 읊으면
+- 자본주의 경제(시장경제), 수요/공급의 법칙(가격이 오르면 수요는 줄어들고 공급은 늘어남, 가격이 내리면 수요는 늘어나고 공급은 줄어듬)  
+- 예외(공공재, 수익형민자사업)  
+### 1-12. 규모의 경제가 꼼지락  
+
+
